@@ -6,6 +6,7 @@ Version 0.7.1 (ongoing):
 	index_set is a tuple
 	much refactoring of code
 	cleanup for pylint
+	ipython html rendering (experimental)
 
 Version 0.7 (2011-08-09):
 	added QR and random_unitary methods
